--- a/html/container_row.html
+++ b/html/container_row.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>row & container</title>
+    <link rel="stylesheet" href="../bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/style.css">
+
 </head>
 <body>
+
+    <div class="container">
+        <div class="row  ">
+            <div class="col-md">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia molestias quae laudantium error. Ducimus aspernatur natus excepturi nisi hic officiis.
+            </div>
+            <div class="col-md">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, autem?
+            </div>
+            <div class="col-md">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit earum sapiente amet eum hic esse.
+            </div>
+            <div class="col">24</div>
+            <div class="col">24</div>
+            <div class="col">64</div>
+        </div>
+    </div>
     
 </body>
 </html>
