--- a/html/container_row.html
+++ b/html/container_row.html
@@ -12,14 +12,14 @@
 <body>
 
     <div class="container">
-        <div class="row  ">
+        <div class="row  "> //row-cols-4 {1-6} support kore
             <div class="col-md">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia molestias quae laudantium error. Ducimus aspernatur natus excepturi nisi hic officiis.
             </div>
             <div class="col-md">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, autem?
             </div>
-            <div class="col-md">
+            <div class="col-md"> //en data medium screen e break point hobe.
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit earum sapiente amet eum hic esse.
             </div>
             <div class="col">24</div>
