remove margir from bottom on nav bar

--- a/html/grid.html
+++ b/html/grid.html
@@ -32,7 +32,12 @@
         </div>
         <div class="row">
             <div class="col-12 nav">
-                a b c d
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Menu</a></li>
+                    <li><a href="">More</a></li>
+                    <li><a href="">page</a></li>
+                </ul>
             </div>
         </div>
         <div class="row">
