add more responsize

--- a/html/grid.html
+++ b/html/grid.html
@@ -40,14 +40,19 @@
                 </ul>
             </div>
         </div>
+
         <div class="row">
-            <div class="col-sm-9 col-lg-4 article">
+            <div class="col-sm-2 col-lg-2">
+                THis is notice
+            </div>
+            <div class="col-sm-8 col-lg-7 article">
                 article Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti odio natus quasi quidem voluptate ullam, cumque doloremque, dicta accusantium sapiente est. Impedit, voluptates. Debitis et earum eligendi veritatis alias incidunt aperiam dignissimos voluptatum temporibus. Deserunt exercitationem quisquam natus? Repellendus, fugit voluptas nemo dicta qui repellat? Voluptatum atque ipsa maxime, pariatur tempora quaerat tenetur quae repellat voluptas sequi libero cumque adipisci!
             </div>
-            <div class="col-sm-3 col-lg-8 side">
+            <div class="col-sm-2 col-lg-3 side">
                 left site
             </div>
         </div>
+
         <div class="row">
             <div class="col-12 footer">
                 this is footer
