--- a/html/grid.html
+++ b/html/grid.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="../bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
     <div class="container">
         <!-- <div class="row">
@@ -46,7 +48,11 @@
                 THis is notice
             </div>
             <div class="col-sm-8 col-lg-7 article">
-                article Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti odio natus quasi quidem voluptate ullam, cumque doloremque, dicta accusantium sapiente est. Impedit, voluptates. Debitis et earum eligendi veritatis alias incidunt aperiam dignissimos voluptatum temporibus. Deserunt exercitationem quisquam natus? Repellendus, fugit voluptas nemo dicta qui repellat? Voluptatum atque ipsa maxime, pariatur tempora quaerat tenetur quae repellat voluptas sequi libero cumque adipisci!
+                article Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti odio natus quasi quidem
+                voluptate ullam, cumque doloremque, dicta accusantium sapiente est. Impedit, voluptates. Debitis et
+                earum eligendi veritatis alias incidunt aperiam dignissimos voluptatum temporibus. Deserunt
+                exercitationem quisquam natus? Repellendus, fugit voluptas nemo dicta qui repellat? Voluptatum atque
+                ipsa maxime, pariatur tempora quaerat tenetur quae repellat voluptas sequi libero cumque adipisci!
             </div>
             <div class="col-sm-2 col-lg-3 side">
                 left site
@@ -54,12 +60,24 @@
         </div>
 
         <div class="row">
-            <div class="col-12 footer">
+            <div class="col offset-md-9 footer">
                 this is footer
             </div>
         </div>
 
-
     </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 offset-md-2 col-lg-6 offset-lg-0 blue">
+                This is Extra Column
+            </div>
+            <div class="col-md-6 col-lg-6">
+                This is a;sldfkj
+            </div>
+        </div>
+    </div>
+
 </body>
+
 </html>
