--- a/html/grid.html
+++ b/html/grid.html
@@ -67,7 +67,7 @@
 
     </div>
 
-    <div class="container">
+    <!-- <div class="container">
         <div class="row">
             <div class="col-md-4 offset-md-2 col-lg-6 offset-lg-0 blue">
                 This is Extra Column
@@ -76,7 +76,15 @@
                 This is a;sldfkj
             </div>
         </div>
+    </div> -->
+
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-md-4 col-lg-5 offset-lg-2  pink">one</div>
+            <div class="col-12 col-md-8 col-lg-5 pink-2">two</div>
+        </div>
     </div>
+    
 
 </body>
 
