--- a/html/vartical_align.html
+++ b/html/vartical_align.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="row align-items-">
+            <div class="col-4 ">one</div>
+            <div class="col-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam, assumenda! Nulla voluptates deleniti adipisci vero, facilis delectus unde ipsum asperiores non vitae odio accusantium laboriosam error explicabo neque illum repellat?</div>
+            <div class="col-4">two</div>
+        </div>
+    </div> 
 </body>
 </html>
