--- a/html/vartical_align.html
+++ b/html/vartical_align.html
@@ -9,12 +9,26 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="row align-items-">
-            <div class="col-4 ">one</div>
-            <div class="col-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam, assumenda! Nulla voluptates deleniti adipisci vero, facilis delectus unde ipsum asperiores non vitae odio accusantium laboriosam error explicabo neque illum repellat?</div>
-            <div class="col-4">two</div>
+    <!-- <div class="container">
+        <div class="row  h-500 align-content-md-start align-content-lg-end align-content-xl-center " >
+            <div class="col-md-4 order-md-5">one</div>
+            <div class="col-md-4 order-md-3">two</div>
+            <div class="col-md-4 order-md-1">three</div>
+            <div class="col-md-4">four</div>
+            <div class="col-md-4">five</div>
         </div>
-    </div> 
+    </div>  -->
+
+
+
+    <div class="container">
+        <div class="row h-500 align-content-center">
+            <div class="col align-self-end">one</div>
+            <div class="col align-self-center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis, necessitatibus?</div>
+            <div class="col align-self-start">Lorem, ipsum dolor.</div>
+        </div>
+    </div>
+
 </body>
 </html>
+
