--- a/html/dropdown.html
+++ b/html/dropdown.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,9 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+
 <body>
-    
+
     <div class="dropdown">
         <button class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">click</button>
         <div class="dropdown-menu">
@@ -20,7 +22,38 @@
         </div>
     </div>
 
+    <ul class="list-group list-group-horizontal-md">
+        <li class="list-group-item">one</li>
+        <li class="list-group-item">one</li>
+        <li class="list-group-item">one</li>
+    </ul>
+    <br>
+    <ul class="list-group list-group-flush ">
+        <li class="list-group-item list-group-item-success">one</li>
+        <li class="list-group-item">one</li>
+        <li class="list-group-item">one</li>
+        <li class="list-group-item">one</li>
+        <li class="list-group-item">one</li>
+    </ul>
+
+
+    <div class="">
+        <div class="btn-group btn-group-justified">
+            <div class="btn btn-primary">Click Me</div>
+            <div class="btn btn-warning">Click Me</div>
+            <div class="btn btn-success">Click Me</div>
+        </div>
+    </div>
+    <hr>
+    <div class="btn-group btn-group-justified">
+        <a href="#" class="btn btn-primary">Apple</a>
+        <a href="#" class="btn btn-primary">Samsung</a>
+        <a href="#" class="btn btn-primary">Sony</a>
+    </div>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
+
 </html>
