--- a/html/v5.html
+++ b/html/v5.html
@@ -1,15 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .borders {
+            border: 2px solid red;
+        }
+    </style>
 </head>
+
 <body>
-    adsf
-    
+
+    <div class="container">
+        <div class="row borders gx-md-2 gx-lg-0  ">
+            <div class="col-12 col-md-6 col-lg-4 ">
+                <div class="bg-primary lh-sm">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex unde amet dolores asperiores dicta quia
+                    eius, nobis eveniet sapiente nostrum?
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 ">
+                <div class="bg-warning">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis soluta fuga nesciunt? Nesciunt,
+                    et debitis dolorem nulla molestiae earum maxime.
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 ">
+                <div class="bg-danger">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis soluta fuga nesciunt? Nesciunt,
+                    et debitis dolorem nulla molestiae earum maxime.
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <table class="table table-bordered border-warning">
+        <thead class="thead-dark">
+            <tr>
+                <th>ONe</th>
+                <th>ONe</th>
+                <th>ONe</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr class=""> 
+                <td>one</td>
+                <td>one</td>
+                <td>one</td>
+            </tr>
+            <tr>
+                <td>one</td>
+                <td>one</td>
+                <td>one</td>
+            </tr>
+            <tr>
+                <td>one</td>
+                <td>one</td>
+                <td>one</td>
+            </tr>
+            <tr>
+                <td>one</td>
+                <td>one</td>
+                <td>one</td>
+            </tr>
+        </tbody>
+    </table>
+<br><hr>
+
+<div class="">
+    <div class="container">
+        <div class="row ">
+            <div class="col-12 ">
+                <div class="mx-auto w-50 text-center">jone</div>
+            </div>
+        </div>
+    </div>
+</div>
+
 </body>
+
 </html>
