--- a/html/form3.html
+++ b/html/form3.html
@@ -1,13 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../bootstrap/bootstrap.min.css">
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
+        integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
+        crossorigin="anonymous"></script>
 </head>
+
 <body>
-    
+
+    <div class="input-group">
+        <div class="input-group-append">
+            <span class="input-group-text">$</span>
+        </div>
+        <input type="text" name="" class="form-control shadow-none" id="">
+    </div>
+
+
+    <div class="container">
+        <div class="row">
+            <div class="col-6">
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <div class="input-group-text">one</div>
+                    </div>
+                    <input type="text" class="form-control">
+                    <div class="input-group-append">
+                        <div class="input-group-text">
+                            two
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-6">
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <div class="input-group-text">
+                            <input type="checkbox" name="" id="">
+                        </div>
+                        <input type="text" class="form-control">
+                        <input type="text" class="form-control">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <button class="btn mt-4 btn-success dropdown-toggle" data-toggle="dropdown">dropdown</button>
+    <div class="dropdown-menu">
+        <div class="dropdown-item">one</div>
+        <div class="dropdown-item">one</div>
+        <div class="dropdown-item">one</div>
+    </div>
+
 </body>
+
 </html>
