--- a/html/nav.html
+++ b/html/nav.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="../bootstrap/bootstrap.min.css">
 </head>
 <body>
-
+    <ul class="nav">
+        <li class="nav-item bg-warning mx-1  "><a href="" class="nav-link">Home</a></li>
+        <li class="nav-item bg-warning mx-1 "><a href="" class="nav-link">Home</a></li>
+        <li class="nav-item bg-warning mx-1 "><a href="" class="nav-link">Home</a></li>
+        <li class="nav-item bg-warning mx-1 "><a href="" class="nav-link">Home</a></li>
+        <li class="nav-item bg-warning mx-1 "><a href="" class="nav-link">Home</a></li>
+    </ul>
 </body>
 </html>
