--- a/html/nav.html
+++ b/html/nav.html
@@ -6,14 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>This is nav bar</title>
     <link rel="stylesheet" href="../bootstrap/bootstrap.min.css">
+    <style>
+        .nav{
+            background-color: cadetblue;
+        }
+        .nav-item:hover{
+            background-color:rgb(18, 196, 202);
+        }
+        .nav-link{
+            color: white;
+        }.nav-link:hover{
+            color: wheat;
+        }
+    </style>
 </head>
 <body>
     <ul class="nav">
-        <li class="nav-item bg-warning mx-1  "><a href="" class="nav-link">Home</a></li>
-        <li class="nav-item bg-warning mx-1 "><a href="" class="nav-link">Home</a></li>
-        <li class="nav-item bg-warning mx-1 "><a href="" class="nav-link">Home</a></li>
-        <li class="nav-item bg-warning mx-1 "><a href="" class="nav-link">Home</a></li>
-        <li class="nav-item bg-warning mx-1 "><a href="" class="nav-link">Home</a></li>
+        <li class="nav-item "><a href="" class="nav-link">Home</a></li>
+        <li class="nav-item "><a href="" class="nav-link">Home</a></li>
+        <li class="nav-item "><a href="" class="nav-link">Home</a></li>
+        <li class="nav-item "><a href="" class="nav-link">Home</a></li>
+        <li class="nav-item "><a href="" class="nav-link">Home</a></li>
     </ul>
 </body>
 </html>
