--- a/html/nav.html
+++ b/html/nav.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,26 +8,42 @@
     <title>This is nav bar</title>
     <link rel="stylesheet" href="../bootstrap/bootstrap.min.css">
     <style>
-        .nav{
+        .nav {
             background-color: cadetblue;
         }
-        .nav-item:hover{
-            background-color:rgb(18, 196, 202);
+
+        .nav-item:hover {
+            background-color: rgb(53, 150, 153);
         }
-        .nav-link{
+
+        .nav-link {
             color: white;
-        }.nav-link:hover{
-            color: wheat;
+        }
+
+        .nav-link:hover,  .active {
+            color: white;
+            background-color: rgb(53, 150, 153);
         }
     </style>
 </head>
+
 <body>
-    <ul class="nav">
-        <li class="nav-item "><a href="" class="nav-link">Home</a></li>
+    <ul class="nav justify-content-md-center justify-content-lg-end">
+        <li class="nav-item  active"><a href="" class="nav-link">Home</a></li>
         <li class="nav-item "><a href="" class="nav-link">Home</a></li>
         <li class="nav-item "><a href="" class="nav-link">Home</a></li>
         <li class="nav-item "><a href="" class="nav-link">Home</a></li>
         <li class="nav-item "><a href="" class="nav-link">Home</a></li>
     </ul>
+
+<hr>
+    <nav class="nav">
+        <a href="" class="nav-link active">one</a>
+        <a href="" class="nav-link">thow</a>
+        <a href="" class="nav-link">Pages</a>
+        <a href="" class="nav-link">asdf</a>
+        <a href="" class="nav-link">Thos</a>
+    </nav>
 </body>
+
 </html>
