--- a/html/nav.html
+++ b/html/nav.html
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-    <ul class="nav justify-content-md-center justify-content-lg-end">
+    <ul class="nav flex-column flex-md-row justify-content-md-center justify-content-lg-end">
         <li class="nav-item  active"><a href="" class="nav-link">Home</a></li>
         <li class="nav-item "><a href="" class="nav-link">Home</a></li>
         <li class="nav-item "><a href="" class="nav-link">Home</a></li>
@@ -37,7 +37,7 @@
     </ul>
 
 <hr>
-    <nav class="nav">
+    <nav class="nav nav-pills nav-justified">
         <a href="" class="nav-link active">one</a>
         <a href="" class="nav-link">thow</a>
         <a href="" class="nav-link">Pages</a>
@@ -45,5 +45,4 @@
         <a href="" class="nav-link">Thos</a>
     </nav>
 </body>
-
 </html>
