--- a/html/dropdown.html
+++ b/html/dropdown.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-
+<!-- 
     <div class="dropdown">
         <button class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">click</button>
         <div class="dropdown-menu">
@@ -20,7 +20,7 @@
                 <li><a class="text-reset" href="">one</a></li>
             </ul>
         </div>
-    </div>
+    </div> -->
 
     <ul class="list-group list-group-horizontal-md">
         <li class="list-group-item">one</li>
@@ -52,8 +52,26 @@
     </div>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <hr>
+    <br>
+    <button class="dropdown-toggle btn btn-primary" data-toggle="dropdown">
+        click
+    </button>
+    <div class="dropdown-menu">
+        <ul>
+            <li><a href="" class="dropdown-list">hone</a></li>
+            <li><a href="" class="dropdown-list">hone</a></li>
+            <li><a href="" class="dropdown-list">hone</a></li>
+            <li><a href="" class="dropdown-list">hone</a></li>
+            <li><a href="" class="dropdown-list">hone</a></li>
+            
+        </ul>
+    </div>
 
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script> -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 </body>
 
 </html>
