--- a/html/img&vid.html
+++ b/html/img&vid.html
@@ -17,6 +17,9 @@
         <div class="col-4 borders">
             <img class="img-fluid rounded-circle w-100 h-75"  src="../img/iloveimg-compressed/3.jpg" alt="">
         </div>
+        <div class="col-4">
+            <div class="p-3 border border-left-0 shadow-lg ">Lorem ipsum, dolor sit amet consectetur adipisicing.</div>
+        </div>
     </div>
 
 
