--- a/html/navbar.html
+++ b/html/navbar.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <div class="navbar navbar-expand-md bg-dark navbar-dark p-0">
+    <div class="navbar navbar-expand-md bg-dark navbar-dark p-0 ">
         <a href="" class="navbar-brand fs-2 ms-3">ThisNEw</a>
 
         <button class="navbar-toggler me-3 shadow-none border-0" type="button" data-bs-toggle="collapse" data-bs-target="#btn"><i
@@ -24,7 +24,13 @@
                 <li class="nav-item"><a href="" class="nav-link px-3">About</a></li>
                 <li class="nav-item"><a href="" class="nav-link px-3">Pages</a></li>
             </ul>
+
         </div>
+    </div>
+    <div class="nav bg-warning">
+        <li class="nav-item"><a href="" class="nav-link">Home</a></li>
+        <li class="nav-item"><a href="" class="nav-link">Home</a></li>
+        <li class="nav-item"><a href="" class="nav-link">Home</a></li>
     </div>
 
 
