--- a/html/navbar.html
+++ b/html/navbar.html
@@ -12,13 +12,16 @@
 
 <body>
 
-    <div class="navbar navbar-expand-md bg-dark navbar-dark p-0 ">
+    <!-- <div class="navbar navbar-expand-md bg-dark navbar-dark p-0 ">
         <a href="" class="navbar-brand fs-2 ms-3">ThisNEw</a>
 
-        <button class="navbar-toggler me-3 shadow-none border-0" type="button" data-bs-toggle="collapse" data-bs-target="#btn"><i
-                class="fa-solid fa-bars"></i></button>
+        <button class="navbar-toggler me-3 shadow-none border-0 " type="button" data-bs-toggle="collapse"
+            data-bs-target="#btn">
+            <i class="fa-solid fa-bars"></i>
+        </button>
+
         <div class="collapse navbar-collapse" id="btn">
-            
+
             <ul class="navbar-nav  ms-md-auto">
                 <li class="nav-item"><a href="" class="nav-link px-3">Home</a></li>
                 <li class="nav-item"><a href="" class="nav-link px-3">About</a></li>
@@ -27,11 +30,30 @@
 
         </div>
     </div>
+     -->
     <div class="nav bg-warning">
         <li class="nav-item"><a href="" class="nav-link">Home</a></li>
         <li class="nav-item"><a href="" class="nav-link">Home</a></li>
         <li class="nav-item"><a href="" class="nav-link">Home</a></li>
     </div>
+
+    <hr><br>
+
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark ">
+        <a href="" class="navbar-brand ps-3">Tailwind</a>
+
+        <button class="navbar-toggler shadow-none" type="button" data-bs-toggle="collapse" data-bs-target="#btn"><i class="fa-solid fa-bars"></i></button>
+
+        <div class="collapse navbar-collapse" id="btn"">
+          <ul class=" navbar-nav">
+            <li class="nav-item"><a href="" class="nav-link ps-3">Home</a></li>
+            <li class="nav-item"><a href="" class="nav-link ps-3">Home</a></li>
+            <li class="nav-item"><a href="" class="nav-link ps-3">Home</a></li>
+            <li class="nav-item"><a href="" class="nav-link ps-3">Home</a></li>
+            <li class="nav-item"><a href="" class="nav-link ps-3">Home</a></li>
+            </ul>
+        </div>
+    </nav>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
