--- a/html/navbar.html
+++ b/html/navbar.html
@@ -45,12 +45,12 @@
         <button class="navbar-toggler shadow-none" type="button" data-bs-toggle="collapse" data-bs-target="#btn"><i class="fa-solid fa-bars"></i></button>
 
         <div class="collapse navbar-collapse" id="btn"">
-          <ul class=" navbar-nav">
-            <li class="nav-item"><a href="" class="nav-link ps-3">Home</a></li>
-            <li class="nav-item"><a href="" class="nav-link ps-3">Home</a></li>
-            <li class="nav-item"><a href="" class="nav-link ps-3">Home</a></li>
-            <li class="nav-item"><a href="" class="nav-link ps-3">Home</a></li>
-            <li class="nav-item"><a href="" class="nav-link ps-3">Home</a></li>
+            <ul class="navbar-nav ms-auto ">
+                <li class="nav-item"><a href="" class="nav-link ps-3">Home</a></li>
+                <li class="nav-item"><a href="" class="nav-link ps-3">Home</a></li>
+                <li class="nav-item"><a href="" class="nav-link ps-3">Home</a></li>
+                <li class="nav-item"><a href="" class="nav-link ps-3">Home</a></li>
+                <li class="nav-item"><a href="" class="nav-link ps-3">Home</a></li>
             </ul>
         </div>
     </nav>
