--- a/html/card.html
+++ b/html/card.html
@@ -19,6 +19,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-lg-4 col-xl-3 my-2 ">
+
                 <div class="card">
                     <img src="../img/newsize/1.jpg" alt="" class="card-img-top img-fluid " width="">
                     <div class="card-body">
@@ -33,19 +34,40 @@
                             incidunt ea dolorum neque voluptatem nemo.
                         </p>
                         <!-- <div class="d-flex justify-content-between"> -->
-                        <button class="btn btn-primary">Click me</button>
-                        <button class="btn btn-danger ">Click me</button>
+                        <!-- <button class="btn btn-primary">Click me</button>
+                        <button class="btn btn-danger ">Click me</button> -->
                         <!-- </div> -->
+                        <a href="" class="card-link">Read More</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-6 col-lg-4 col-xl-3 my-2  ">
                 <div class="card">
                     <img src="../img/newsize/1.jpg" alt="" class="card-img-top img-fluid " width="">
+                    <div class="card-body p-0">
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Home</li>
+                            <li class="list-group-item">Home</li>
+                            <li class="list-group-item">Home</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-8 col-lg-7 col-xl-6 my-2 ">
+                <div class="card">
+                    <img src="../img/newsize/1.jpg" alt="" class="card-img-top img-fluid " width="">
                     <div class="card-body">
-                        <h3 class="card-title mb-1">
+                        <!-- <h3 class="card-title mb-1">
                             This is a new card for all time.
-                        </h3>
+                        </h3> -->
+                        <div class="card-header">
+                            <ul class="nav">
+                                <li class="nav-item bg-warning m-1"><a href="" class="nav-link">Home</a></li>
+                                <li class="nav-item bg-warning m-1"><a href="" class="nav-link">Home</a></li>
+                                <li class="nav-item bg-warning m-1"><a href="" class="nav-link">Home</a></li>
+                                <li class="nav-item bg-warning m-1"><a href="" class="nav-link">Home</a></li>
+                            </ul>
+                        </div>
                         <h5 class="card-subtitile  text-muted ">
                             this is a new sub title
                         </h5>
@@ -167,8 +189,8 @@
             </div>
             <div class="col-md-6 col-lg-4 col-xl-3 my-2 ">
                 <div class="card">
-                    <img src="../img/newsize/1.jpg" alt="" class="card-img-top img-fluid " width="">
-                    <div class="card-body">
+                    <img src="../img/newsize/man-2-m.jpg" alt="" class="card-img-top img-fluid " width="">
+                    <div class="card-img-overlay text-white">
                         <h3 class="card-title mb-1">
                             This is a new card for all time.
                         </h3>
@@ -179,55 +201,24 @@
                             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas suscipit quos, dolore vero
                             incidunt ea dolorum neque voluptatem nemo.
                         </p>
-                        <!-- <div class="d-flex justify-content-between"> -->
-                        <button class="btn btn-primary">Click me</button>
-                        <button class="btn btn-danger ">Click me</button>
-                        <!-- </div> -->
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-lg-4 col-xl-3 my-2 ">
+            <div class="col-md-8 col-xl-6 my-2 ">
                 <div class="card">
-                    <img src="../img/newsize/1.jpg" alt="" class="card-img-top img-fluid " width="">
-                    <div class="card-body">
-                        <h3 class="card-title mb-1">
-                            This is a new card for all time.
-                        </h3>
-                        <h5 class="card-subtitile  text-muted ">
-                            this is a new sub title
-                        </h5>
-                        <p class="card-text">
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas suscipit quos, dolore vero
-                            incidunt ea dolorum neque voluptatem nemo.
-                        </p>
-                        <!-- <div class="d-flex justify-content-between"> -->
-                        <button class="btn btn-primary">Click me</button>
-                        <button class="btn btn-danger ">Click me</button>
-                        <!-- </div> -->
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-4 col-xl-3 my-2 ">
-                <div class="card">
-                    <img src="../img/newsize/1.jpg" alt="" class="card-img-top img-fluid " width="">
-                    <div class="card-body ">
-                        <!-- <div class="card-header px-0 mx-0">
-                            This is header
-                        </div> -->
-                        <h3 class="card-title mb-1">
-                            This is a new card for all time.
-                        </h3>
-                        <h5 class="card-subtitile  text-muted ">
-                            this is a new sub title
-                        </h5>
-                        <p class="card-text">
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas suscipit quos, dolore vero
-                            incidunt ea dolorum neque voluptatem nemo.
-                        </p>
-                        <!-- <div class="d-flex justify-content-between"> -->
-                        <button class="btn btn-primary">Click me</button>
-                        <button class="btn btn-danger ">Click me</button>
-                        <!-- </div> -->
+                    <div class="row">
+                        <div class="col-md-5">
+                            <img src="../img/newsize/1.jpg" class="img-fluid" alt="">
+                        </div>
+                        <div class="col-md-7">
+                            <div class="card-title">
+                                <h3>This is a new card</h3>
+                            </div>
+                            <p class="card-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia obcaecati ab sit
+                                consequuntur nam expedita quod deserunt error ipsam sunt?
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
