--- a/plugin/tooltip.html
+++ b/plugin/tooltip.html
@@ -11,37 +11,51 @@
     <!-- <link rel="stylesheet" href="../bootstrap/bootstrap.bundle.min.js"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    
+<style>
+    .custom-tooltip{
+        --bs-tooltip-bg: red;
+        --bs-tooltip-max-width: 800px;
+    }
+</style>
 </head>
 
 <body">
     <div class="m-5 p-5">
 
 
-        <button class="btn btn-primary m-5" data-bs-toggle="tooltip" data-bs-placement="bottom"
-            title="tooltips Button">Click me</button>
+        <button class="btn btn-primary m-5" data-bs-custom-class="custom-tooltip" id="tt">Click me</button>
 
-       <button class="btn btn-primary m-5" data-bs-toggle="tooltip" data-bs-placement="left"
-            title="tooltips Button">Click me</button>
+        <button class="btn btn-primary m-5">Click two</button>
 
-       <button class="btn btn-primary m-5" data-bs-toggle="tooltip" data-bs-placement="left"
+        <button class="btn btn-primary m-5" data-bs-toggle="tooltip" data-bs-placement="left"
             title="tooltips Button">Click me</button>
 
 
     </div>
 
 
-        <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
          -->
-         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <script>
 
-        var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
-        var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
-            return new bootstrap.Tooltip(tooltipTriggerEl)
+        // var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+        // var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+        //     return new bootstrap.Tooltip(tooltipTriggerEl)
+        // })
+
+        // const exampleEl = document.getElementById('example')
+        const tooltip = new bootstrap.Tooltip('#tt', {
+            title: "<h1>adsfadadfasdfadfasdfasdf sdfasdfasdfad df adsfsd df dsfds dfdsf d fdsf sfasdf</h1>",
+            html: true,
+            placement: 'bottom',
+            // delay: {'show':500}
         })
+
+
+
     </script>
 
     </body>
