add some extra csl

--- a/masonry-layout.html
+++ b/masonry-layout.html
@@ -87,25 +87,47 @@
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, qui?
                     </div>
                 </div>
-            </div><div class="col-6 col-lg-4">
+            </div>
+            <div class="col-6 col-lg-4">
                 <div class="card">
                     <img src="./img/newsize/1.jpg" alt="" class="card-img-top img-fluid">
                     <div class="card-body">
                     </div>
                 </div>
-            </div><div class="col-6 col-lg-4">
+            </div>
+            <div class="col-6 col-lg-4">
                 <div class="card">
                     <!-- <img src="./img/newsize/1.jpg" alt="" class="card-img-top img-fluid"> -->
-                    <div class="card-body"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores sapiente quae animi veniam? Accusamus soluta vel molestias reprehenderit culpa voluptatum eius consectetur fugit quasi rem, facilis sint nihil magnam mollitia perspiciatis suscipit velit quae debitis at vero voluptatem dolorem illum inventore. Omnis eligendi, molestiae natus aspernatur nemo error dicta doloremque.
+                    <div class="card-body"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores sapiente
+                        quae animi veniam? Accusamus soluta vel molestias reprehenderit culpa voluptatum eius
+                        consectetur fugit quasi rem, facilis sint nihil magnam mollitia perspiciatis suscipit velit quae
+                        debitis at vero voluptatem dolorem illum inventore. Omnis eligendi, molestiae natus aspernatur
+                        nemo error dicta doloremque.
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, qui?
                     </div>
                 </div>
             </div>
+            <div class="col-6 col-lg-4">
+                <div class="card">
+                    <img src="https://picsum.photos/id/237/200/300" alt="" class="card-img-top img-fluid">
+                    <div class="card-body"> Losectetur adipisicing elit. Repellendus, qui?
+                    </div>
+                </div>
+            </div> <div class="col-6 col-lg-4">
+                <div class="card">
+                    <img src="https://picsum.photos/id/237/200/100" alt="" class="card-img-top img-fluid">
+                    <div class="card-body"> Losectetur adipisicing elit. Repellendus, qui?
+                    </div>
+                </div>
+            </div>
 
-            
+
 
         </div>
     </div>
+
+
+    
     <!-- <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script> -->
     <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
 </body>
