--- a/index.html
+++ b/index.html
@@ -11,26 +11,74 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
+
+
+    <style>
+        /* .row{
+        width: auto;
+        height: 400px;
+    } */
+        .x {
+            background-color: aquamarine;
+
+        }
+
+        .x #datalistOptions option:hover {
+            background-color: red;
+
+        }
+    </style>
+
+
+
 </head>
 
 <body>
-    <header>
-        <!-- place navbar here -->
-        <div class="card text-start">
-          <img class="card-img-top img-fluid" src="./img/craig-mckay-jmURdhtm7Ng-unsplash.jpg" alt="Title">
-          <div class="card-body">
-            <h4 class="card-title">Title</h4>
-            <p class="card-text">Body</p>
-          </div>
-        </div>
-    </header>
-    <main>
 
-    </main>
-    <footer>
-        <!-- place footer here -->
-    </footer>
-    <!-- Bootstrap JavaScript Libraries -->
+    <div class="row">
+        <div class="col-5 p-5">
+            <div class="float-sm-start">Float start on viewports sized SM (small) or wider</div><br>
+            <div class="float-md-start">Float start on viewports sized MD (medium) or wider</div><br>
+            <div class="float-lg-start">Float start on viewports sized LG (large) or wider</div><br>
+            <div class="float-xl-start">Float start on viewports sized XL (extra-large) or wider</div><br>
+
+
+
+        </div>
+        <div class="col-5">
+            <h2>This is a new level</h2>
+            <input type="radio" name="" class="form-check-input shadow-none" id="">
+            <br>
+            <div class="form-check form-switch >
+                <input type=" checkbox" name="" class="form-check-input" id="">
+            </div>
+            <div class="input-group flex-nowrap">
+                <span class="input-group-text" id="addon-wrapping">@</span>
+                <input type="text" class="form-control" placeholder="Username" aria-label="Username"
+                    aria-describedby="addon-wrapping">
+            </div>
+            <div class="input-group">
+                <!-- <span class="input-group-text">First and last name</span> -->
+                <input type="text" placeholder="First Name" aria-label="First name" class="form-control shadow-sm">
+                <input type="text" aria-label="Last name" class="form-control">
+            </div>
+
+            <div class="form-floating">
+                <input type="text" name="" placeholder="c" class="form-control" id="f">
+                <label for="f">First Name</label>
+            </div>
+            <br>
+
+        </div>
+    </div>
+
+
+
+
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
         </script>
