--- a/index.html
+++ b/index.html
@@ -8,84 +8,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS v5.2.1 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 
-
     <style>
-        /* .row{
-        width: auto;
-        height: 400px;
-    } */
-        .x {
-            background-color: aquamarine;
-
-        }
-
-        .x #datalistOptions option:hover {
-            background-color: red;
-
+        #one {
+            --bs-tooltip-max-width: 500px;
         }
     </style>
-
-
 
 </head>
 
 <body>
 
-    <div class="row">
-        <div class="col-5 p-5">
-            <div class="float-sm-start">Float start on viewports sized SM (small) or wider</div><br>
-            <div class="float-md-start">Float start on viewports sized MD (medium) or wider</div><br>
-            <div class="float-lg-start">Float start on viewports sized LG (large) or wider</div><br>
-            <div class="float-xl-start">Float start on viewports sized XL (extra-large) or wider</div><br>
 
 
-
-        </div>
-        <div class="col-5">
-            <h2>This is a new level</h2>
-            <input type="radio" name="" class="form-check-input shadow-none" id="">
-            <br>
-            <div class="form-check form-switch >
-                <input type=" checkbox" name="" class="form-check-input" id="">
-            </div>
-            <div class="input-group flex-nowrap">
-                <span class="input-group-text" id="addon-wrapping">@</span>
-                <input type="text" class="form-control" placeholder="Username" aria-label="Username"
-                    aria-describedby="addon-wrapping">
-            </div>
-            <div class="input-group">
-                <!-- <span class="input-group-text">First and last name</span> -->
-                <input type="text" placeholder="First Name" aria-label="First name" class="form-control shadow-sm">
-                <input type="text" aria-label="Last name" class="form-control">
-            </div>
-
-            <div class="form-floating">
-                <input type="text" name="" placeholder="c" class="form-control" id="f">
-                <label for="f">First Name</label>
-            </div>
-            <br>
-
-        </div>
-    </div>
+    <button type="button" class="btn btn-secondary  " data-bs-toggle="tooltip" data-bs-placement="top"
+        data-bs-title="Tooltip on top" id="two">
+        Tooltip on top
+    </button>
 
 
 
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./bootstrap/jquery.js"></script>
+
+
+    <script>
+        const exampleEl = document.getElementById('two')
+        const tooltip = new bootstrap.Tooltip(exampleEl, {
+            title: "<h1>Ruman tqert qtqrt qrtq tqert er trqet <i>Miah</i></h1>",
+            html: true
+        })
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
-        </script>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
-        integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
-        </script>
+    </script>
 </body>
 
 </html>
