--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 
     <style>
-        #one {
-            --bs-tooltip-max-width: 500px;
+        .tooltip {
+            --bs-tooltip-max-width: 100%;
         }
     </style>
 
@@ -41,8 +41,23 @@
     <script>
         const exampleEl = document.getElementById('two')
         const tooltip = new bootstrap.Tooltip(exampleEl, {
-            title: "<h1>Ruman tqert qtqrt qrtq tqert er trqet <i>Miah</i></h1>",
-            html: true
+            title: `<ul class="nav justify-content-end">
+                        <li class="nav-item" >
+                        <a class="nav-link active" aria-current="page" href="#">Active</a>
+                        </li >
+                        <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link disabled">Disabled</a>
+                        </li>
+                </ul > 
+            `,
+            html: true,
+            placement: "bottom"
         })
 
 
